# kuo

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: a.yaml  release.yml
helm/: Chart.yaml  values.yaml
helm/crds/: crds.yaml
helm/templates/: NOTES.txt  _helpers.tpl  crds.yaml  deployment.yaml  ingress.yaml  role.yaml  service.yaml  serviceaccount.yaml
src/: args.rs  lib.rs
src/crds/: inline_permissions.rs  managed_user.rs  mod.rs  permissions.rs
src/operator/: args.rs  ctx.rs  error.rs  mod.rs  utils.rs
src/operator/controller/: csr.rs  managed_user.rs  mod.rs
src/operator/server/: mod.rs
src/operator/utils/: kube.rs  meta.rs  mod.rs  resource.rs
src/server/: mod.rs
src/server/routes/: health.rs  mod.rs
